WKWebView fails to render when another view uses CoreImage filters https://bugs.webkit.org/show_bug.cgi?id=199488 <rdar://problem/52695825>

Reviewed by Dean Jackson.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::layerHostingModeDidChange):
Update m_layerHostingMode when it changes, even if we can't message
the Web Content process. This ensures that the next time we launch
a Web Content process, WebPageCreationParameters will have the correct
layer hosting mode, and is the usual pattern for such things.


Canonical link: https://commits.webkit.org/213479@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247227 268f45cc-cd09-0410-ab3c-d52691b4dbfc